--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h2 class="frame-5">
                 <span>Bùi</span>
                 <span>Thị</span>
-                <span>Ánh</span>
+                <span>Én</span>
             </h2>
             
         </div>
